# dependency-support-policy-action

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  cliff.toml  pyproject.toml  renovate.json  zensical.toml
.github/: pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: ci.yml  codeql.yml  documentation.yml  draft_release.yml  publish_testpypi.yml  release.yml  scheduled_release.yml  semantic_pull_release.yml  support_floor_update.yml
docs/: index.md
docs/reference/: index.md
docs/user-guide/: ci-recommendations.md  cli.md  configuration.md  ecosystem-packages.md  github-action.md  limitations.md  lockfile.md  renovate.md  support-window-model.md
examples/workflows/: pr-compliance-check.yml  scheduled-floor-update.yml  update-with-lockfile.yml
src/dependency_support_policy/: __init__.py  __main__.py  cli.py  config.py  dates.py  errors.py  lockfile.py  planner.py  pyproject_edit.py  python_releases.py  registry.py  requirements.py
src/dependency_support_policy_action/: __init__.py  __main__.py  errors.py  policies.py  registry.py
tests/: conftest.py  smoke_test.py  test_cli.py  test_config.py  test_dates.py  test_lockfile.py  test_planner.py  test_policies.py  test_pyproject_edit.py  test_python_releases.py  test_registry.py  test_requirements.py
tests/data/action/compliant/: pyproject.toml
tests/data/action/dep-update/: pyproject.toml
tests/data/action/invalid-config/: pyproject.toml
tests/data/action/python-update/: pyproject.toml
tests/data/action/with-lock/: pyproject.toml
